@@ -1,3 +1,12 @@
+2013-08-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Fix generation of temporary labels in dry runs, more efficient shift by literal, subtraction and addition.
+	* src/stm8/peeph.def:
+	  Eliminate unreachable jumps (which can be generated by other rules).
+	* src/stm8/ralloc2.cc:
+	  Tune register allocation heuristic.
+
 2013-08-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
